Add TestFastController to generate list of testfast1 to testfast100
